feat: demonstrate multilingual support in MemberDashboard
DEMO TRANSLATION IMPLEMENTATION:

MODIFIED FILES:
- frontend/src/components/MemberDashboard.tsx
  * Import useTranslation hook from react-i18next
  * Add const { t } = useTranslation() hook
  * Translate 'Upcoming Classes' section:
    - Title: t('dashboard.upcomingClasses')
    - Loading: t('common.loading')
    - No classes: t('dashboard.noClasses')
    - View All button: t('navigation.classes')
  * Translate class action buttons:
    - Details button: t('common.details')
    - Book button: t('classes.book')
    - Booked button: t('classes.booked')

UPDATED TRANSLATION FILES:
- Added 'details' key to common namespace (en/az/ru)
  * English: 'Details'
  * Azerbaijani: 'Ətraflı'
  * Russian: 'Подробнее'

TESTING STATUS:
 Vite HMR auto-reload active (servers running)
 Language switcher available in Settings tab
 Translation keys ready for all 3 languages
 Ready for browser testing (change language to see live translation)

VISIBLE CHANGES IN UI:
- Member Dashboard 'Upcoming Classes' section now responds to language changes
- Book/Booked buttons translate to selected language
- Settings tab has language switcher with flag emojis (  )

NEXT STEPS:
- User can test language switching in browser
- Translate remaining components (Profile, Announcements, etc.)
- Add database migration for user language preference
- Update backend API for language support

--- a/frontend/public/locales/az/translation.json
+++ b/frontend/public/locales/az/translation.json
@@ -17,7 +17,8 @@
     "next": "Növbəti",
     "confirm": "Təsdiq et",
     "yes": "Bəli",
-    "no": "Xeyr"
+    "no": "Xeyr",
+    "details": "Ətraflı"
   },
   "navigation": {
     "dashboard": "İdarə Paneli",
