--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -17,7 +17,8 @@
     "next": "Далее",
     "confirm": "Подтвердить",
     "yes": "Да",
-    "no": "Нет"
+    "no": "Нет",
+    "details": "Подробнее"
   },
   "navigation": {
     "dashboard": "Панель управления",
