--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -17,7 +17,8 @@
     "next": "Next",
     "confirm": "Confirm",
     "yes": "Yes",
-    "no": "No"
+    "no": "No",
+    "details": "Details"
   },
   "navigation": {
     "dashboard": "Dashboard",
