feat: translate announcements and QR code sections in MemberDashboard
- Added announcements translation keys (gymNews, showLess, showAll, noAnnouncements, dismiss)
- Added QR code translation keys (title, instructions, memberId, close)
- Translated announcements section heading, buttons, empty state
- Translated QR code modal title, instructions, loading text
- All strings now support en/az/ru languages
- Phase 2 progress: ~15% of MemberDashboard translated

--- a/frontend/public/locales/az/translation.json
+++ b/frontend/public/locales/az/translation.json
@@ -88,16 +88,26 @@
   },
   "announcements": {
     "title": "Elanlar",
+    "gymNews": "Zalın Xəbərləri və Elanları",
     "newAnnouncement": "Yeni Elan",
-    "noAnnouncements": "Elan yoxdur",
+    "noAnnouncements": "Hazırda elan yoxdur. Daha sonra yenidən baxın!",
     "publishedOn": "{{date}} tarixində dərc edilib",
     "readMore": "Daha ətraflı",
     "markAsRead": "Oxunmuş kimi işarələ",
+    "dismiss": "Elanı bağla",
+    "showLess": "Daha az göstər",
+    "showAll": "Hamısını göstər ({{count}})",
     "priority": {
       "high": "Yüksək Prioritet",
       "normal": "Normal",
       "low": "Aşağı Prioritet"
     }
+  },
+  "qrCode": {
+    "title": "Giriş QR Kodunuz",
+    "instructions": "Giriş üçün bu QR kodu resepşn masasına göstərin.",
+    "memberId": "Üzv ID",
+    "close": "Bağla"
   },
   "settings": {
     "title": "Parametrlər",
