--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -88,16 +88,26 @@
   },
   "announcements": {
     "title": "Объявления",
+    "gymNews": "Новости и Объявления Зала",
     "newAnnouncement": "Новое объявление",
-    "noAnnouncements": "Нет доступных объявлений",
+    "noAnnouncements": "Нет объявлений на данный момент. Зайдите позже!",
     "publishedOn": "Опубликовано {{date}}",
     "readMore": "Читать далее",
     "markAsRead": "Отметить как прочитанное",
+    "dismiss": "Закрыть объявление",
+    "showLess": "Показать меньше",
+    "showAll": "Показать все ({{count}})",
     "priority": {
       "high": "Высокий приоритет",
       "normal": "Обычный",
       "low": "Низкий приоритет"
     }
+  },
+  "qrCode": {
+    "title": "Ваш QR-код для входа",
+    "instructions": "Покажите этот QR-код на ресепшн для регистрации.",
+    "memberId": "ID участника",
+    "close": "Закрыть"
   },
   "settings": {
     "title": "Настройки",
