feat: translate welcome section and stats cards in MemberDashboard
- Added dashboard translation keys: welcomeBack, memberSince, myQrCode, showCheckInCode
- Added stats translation keys: visitsThisMonth, totalVisits, upcomingClassesCount
- Translated welcome message with dynamic name interpolation
- Translated membership info and QR code button
- Translated all stat card labels (3 cards)
- Phase 2 progress: ~30% of MemberDashboard translated

--- a/frontend/public/locales/az/translation.json
+++ b/frontend/public/locales/az/translation.json
@@ -46,12 +46,19 @@
   },
   "dashboard": {
     "welcome": "Xoş gəlmisiniz, {{name}}!",
+    "welcomeBack": "Xoş gəldiniz, {{name}}!",
+    "memberSince": "{{date}} tarixindən üzv",
     "upcomingClasses": "Gələcək Dərslər",
     "myBookings": "Mənim Rezervasiyalarım",
     "announcements": "Son Elanlar",
     "noClasses": "Planlaşdırılmış dərs yoxdur",
     "noBookings": "Hələ rezervasiyanız yoxdur",
-    "noAnnouncements": "Elan yoxdur"
+    "noAnnouncements": "Elan yoxdur",
+    "myQrCode": "Mənim QR Kodum",
+    "showCheckInCode": "Giriş kodunu göstərmək üçün toxunun",
+    "visitsThisMonth": "Bu Ay Ziyarətlər",
+    "totalVisits": "Ümumi Ziyarətlər",
+    "upcomingClassesCount": "Gələcək Dərslər"
   },
   "classes": {
     "title": "Dərslər",
