feat: translate navigation menu across all pages
- Import useTranslation hook in App.tsx
- Add navigation keys: home, reception, sparta
- Translate all 4 navigation bars (dashboard, reception, sparta, profile)
- All menu items now support en/az/ru languages
- Translated: Home, Dashboard, Profile, Reception, Sparta, Logout
- Phase 2 progress: Navigation complete, ~40% overall

--- a/frontend/public/locales/az/translation.json
+++ b/frontend/public/locales/az/translation.json
@@ -21,6 +21,7 @@
     "details": "Ətraflı"
   },
   "navigation": {
+    "home": "Ana Səhifə",
     "dashboard": "İdarə Paneli",
     "profile": "Mənim Profilim",
     "classes": "Dərslər",
@@ -29,6 +30,8 @@
     "instructors": "Məşqçilər",
     "announcements": "Elanlar",
     "settings": "Parametrlər",
+    "reception": "Resepşn",
+    "sparta": "Sparta",
     "logout": "Çıxış",
     "login": "Giriş"
   },
