feat: translate class cards and membership status
- Add dashboard keys: membershipStatus, noClassesMessage
- Add classes key: with (instructor preposition)
- Translate 'Membership Status' label
- Translate 'with instructor' text ('ilə' in az, 'с' in ru)
- Translate 'Check back later' message
- All class card elements now support en/az/ru
- Phase 2 progress: ~50% MemberDashboard complete

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -51,10 +51,12 @@
     "welcome": "Welcome, {{name}}!",
     "welcomeBack": "Welcome back, {{name}}!",
     "memberSince": "Member since {{date}}",
+    "membershipStatus": "Membership Status",
     "upcomingClasses": "Upcoming Classes",
     "myBookings": "My Bookings",
     "announcements": "Latest Announcements",
     "noClasses": "No upcoming classes scheduled",
+    "noClassesMessage": "Check back later or contact your instructor",
     "noBookings": "You have no bookings yet",
     "noAnnouncements": "No announcements available",
     "myQrCode": "My QR Code",
@@ -67,6 +69,7 @@
     "title": "Classes",
     "className": "Class Name",
     "instructor": "Instructor",
+    "with": "with",
     "date": "Date",
     "time": "Time",
     "duration": "Duration",
