--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -51,10 +51,12 @@
     "welcome": "Добро пожаловать, {{name}}!",
     "welcomeBack": "С возвращением, {{name}}!",
     "memberSince": "Участник с {{date}}",
+    "membershipStatus": "Статус членства",
     "upcomingClasses": "Предстоящие занятия",
     "myBookings": "Мои бронирования",
     "announcements": "Последние объявления",
     "noClasses": "Нет запланированных занятий",
+    "noClassesMessage": "Зайдите позже или свяжитесь с инструктором",
     "noBookings": "У вас пока нет бронирований",
     "noAnnouncements": "Нет доступных объявлений",
     "myQrCode": "Мой QR-код",
@@ -67,6 +69,7 @@
     "title": "Занятия",
     "className": "Название занятия",
     "instructor": "Инструктор",
+    "with": "с",
     "date": "Дата",
     "time": "Время",
     "duration": "Продолжительность",
