--- a/frontend/public/locales/az/translation.json
+++ b/frontend/public/locales/az/translation.json
@@ -51,10 +51,12 @@
     "welcome": "Xoş gəlmisiniz, {{name}}!",
     "welcomeBack": "Xoş gəldiniz, {{name}}!",
     "memberSince": "{{date}} tarixindən üzv",
+    "membershipStatus": "Üzvlük Statusu",
     "upcomingClasses": "Gələcək Dərslər",
     "myBookings": "Mənim Rezervasiyalarım",
     "announcements": "Son Elanlar",
     "noClasses": "Planlaşdırılmış dərs yoxdur",
+    "noClassesMessage": "Daha sonra yenidən baxın və ya məşqçinizlə əlaqə saxlayın",
     "noBookings": "Hələ rezervasiyanız yoxdur",
     "noAnnouncements": "Elan yoxdur",
     "myQrCode": "Mənim QR Kodum",
@@ -67,6 +69,7 @@
     "title": "Dərslər",
     "className": "Dərs Adı",
     "instructor": "Məşqçi",
+    "with": "ilə",
     "date": "Tarix",
     "time": "Vaxt",
     "duration": "Müddət",
