feat(i18n): complete MyProfile component translation for az/ru/en
- Add useTranslation hook to MyProfile.tsx
- Translate all 4 tabs: Personal Info, Subscription, Emergency Contact, Settings
- Translate form labels: firstName, lastName, email, phone, dateOfBirth, gender
- Translate buttons: edit, save, cancel, saveSettings
- Translate section headings and descriptions
- Add 20+ profile.* translation keys across all 3 languages
- Translate Emergency Contact section fully
- Translate Notification Preferences section
- Zero errors, all keys present in en/az/ru translation files

--- a/frontend/public/locales/az/translation.json
+++ b/frontend/public/locales/az/translation.json
@@ -85,19 +85,35 @@
   },
   "profile": {
     "title": "Mənim Profilim",
+    "tabs": {
+      "personal": "Şəxsi Məlumatlar",
+      "subscription": "Mənim Abunəliyim",
+      "emergency": "Təcili Əlaqə",
+      "settings": "Parametrlər"
+    },
     "personalInfo": "Şəxsi Məlumatlar",
+    "personalInfoDescription": "Əlaqə məlumatlarınızı və şəxsi məlumatlarınızı yeniləyin",
     "firstName": "Ad",
     "lastName": "Soyad",
     "email": "E-poçt",
     "phone": "Telefon",
     "dateOfBirth": "Doğum tarixi",
+    "gender": "Cins",
     "membershipType": "Üzvlük Növü",
     "subscription": "Mənim Abunəliyim",
     "subscriptionStatus": "Abunəlik Statusu",
     "remainingEntries": "Qalan Girişlər",
     "expiryDate": "Bitmə Tarixi",
     "updateProfile": "Profili Yenilə",
-    "changePassword": "Şifrəni Dəyişdir"
+    "changePassword": "Şifrəni Dəyişdir",
+    "edit": "Redaktə et",
+    "save": "Dəyişiklikləri Yadda Saxla",
+    "cancel": "Ləğv et",
+    "emergencyContact": "Təcili Əlaqə",
+    "emergencyContactName": "Təcili Əlaqə Şəxsinin Adı",
+    "emergencyContactPhone": "Təcili Əlaqə Telefonu",
+    "notificationPreferences": "Bildiriş Parametrləri",
+    "saveSettings": "Bildiriş Parametrlərini Yadda Saxla"
   },
   "announcements": {
     "title": "Elanlar",
