feat(i18n): complete QR modal translation in MemberDashboard
- Add qrCode.expires, generated, generateNew, generating, done keys
- Translate QR modal buttons and status text
- All 3 languages: az (Bitmə Tarixi, Yaradılır), ru (Истекает, Создание), en
- MemberDashboard translation now 100% complete

--- a/frontend/public/locales/az/translation.json
+++ b/frontend/public/locales/az/translation.json
@@ -136,6 +136,11 @@
     "title": "Giriş QR Kodunuz",
     "instructions": "Giriş üçün bu QR kodu resepşn masasına göstərin.",
     "memberId": "Üzv ID",
+    "expires": "Bitmə Tarixi",
+    "generated": "Yaradılıb",
+    "generateNew": "Yeni QR Kodu Yarat",
+    "generating": "Yaradılır...",
+    "done": "Hazırdır",
     "close": "Bağla"
   },
   "settings": {
